frontend/src/App.css
@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700&display=swap");

* {
  font-family: "Source Sans Pro", sans-serif;
  margin: 0;
  padding: 0;
  text-decoration: none;
  list-style-type: none;
  outline: none;
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  height: 150px;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* OxfordBlue-HonoluluBlue Gradient */
  background: linear-gradient(157.04deg, #061a40 0%, #006daa 100%);
}

.App-func {
  position: absolute;
  width: 298px;
  height: 807px;
  left: 22px;
  top: 400px;
}

.articles {
  position: relative;
  height: 1372px;
  left: 110px;
  top: 20px;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
}

.article {
  margin: 10px;
  left: 250px;
  width: 1000px;
  display: flex;
  flex-direction: column;
  background-color: #f0f0f0;
  padding: 1rem;
  /* position: relative; */
  border-radius: 0.5rem;
  line-height: 18pt;
  /* box-shadow: 1rem 1rem 1rem #b9d6f2; */
}

.title-author-date {
  margin-top: 0.1rem;
  background: linear-gradient(152.25deg, #061a40 0%, #006daa 100%);
  border-radius: 0.5rem;
  padding: 0.2rem;
  color: #fff;
  line-height: 18pt;
}

.answer-list {
  margin-top: 1rem;
  background-color: #fff;
  border-radius: 0.5rem;
  padding: 0.5rem;
}

.answer-list li {
  margin: 0.5rem 0;
}

.answer-text {
  font-size: 1.5rem;
  color: #888;
}

.button {
  display: block;
  font-weight: 500;
  text-decoration: none;
  color: grey;
  position: relative;
  border: 1px solid white;
  padding: 10px;
  background: #006daa;
  color: white;
}

.App-link {
  color: #61dafb;
}
.heading {
  position: absolute;
  width: 669px;
  height: 10px;
  align-items: center;
  top: 0px;
  font-style: normal;
  font-weight: bold;
  font-size: 48px;
  line-height: 94px;

  /* LightGray-Background */

  color: #f4f4f6;
}

/*Container*/
.container {
  position: absolute;
  width: 800px;
  height: 80px;
  align-items: center;
  top: 50px;
  box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.25);
  border-radius: 20px;
}

.search-form {
  width: 800px;
  height: 60px;
  display: flex;
  top: 70px;
  justify-content: center;
  align-items: center;
  background-color: #f0f0f0;
  /* background-color: #d3d3d3; */
  border-radius: 0.5rem;
  margin-bottom: 5rem;
  position: relative;
}

.search-form input {
  font-size: 1.6rem;
  border: none;
  border-bottom: 0.1rem solid #ccc;
  margin: 0 0.5rem;
  border-radius: 0.5rem;
  height: 3rem;
}

.search-form input[type="text"] {
  padding: 0 0.5rem;
  width: 60%;
  color: #555;
}

.search-form input[type="submit"] {
  width: 25%;
  text-transform: uppercase;
  background-color: #40b48e;
  color: #fff;
}

.highlight_colors {
  align-items: centre;
}

#square_background {
  width: 20px;
  height: 20px;
  margin-left: 10px;
  margin-right: 10px;
  background: #ade4d1;
  display: inline-block;
}
#square_purpose {
  width: 20px;
  height: 20px;
  margin-left: 20px;
  margin-right: 10px;
  background: #e2c2ff;
  display: inline-block;
}
#square_finding {
  width: 20px;
  height: 20px;
  margin-left: 20px;
  margin-right: 10px;
  background: rgb(233, 235, 134);
  display: inline-block;
}
#square_method {
  width: 20px;
  height: 20px;
  margin-left: 20px;
  margin-right: 10px;
  background: pink;
  display: inline-block;
}
#square_other {
  width: 20px;
  height: 20px;
  margin-left: 20px;
  margin-right: 10px;
  background: burlywood;
  display: inline-block;
}
.background {
  background-color: #ade4d1;
  border-radius: 0.3rem;
}

.purpose {
  background-color: #e2c2ff;
  border-radius: 0.3rem;
}

.finding {
  background-color: rgb(233, 235, 134);
  border-radius: 0.3rem;
}
.method {
  background-color: pink;
  border-radius: 0.3rem;
}
.other {
  background-color: burlywood;
  border-radius: 0.3rem;
}

.problem {
  color: red;
  font-weight: bold;
  border-radius: 0.3rem;
}
.test {
  color: purple;
  font-weight: bold;
  border-radius: 0.3rem;
}

.treatment {
  color: green;
  font-weight: bold;
  border-radius: 0.3rem;
}

.inactive {
  color: burlywood;
  text-decoration: underline;
}

.active {
  color: white;
  text-decoration: underline;
}

.external_link {
  color: burlywood;
  text-decoration: underline;
}

.Collapsible {
  background-color: base;
}
.Collapsible__contentInner {
  padding: 10px;
  border: 1px solid lightGrey;
  border-top: 0;
}
.Collapsible__contentInner p {
  margin-bottom: 10px;
  font-size: 14px;
  line-height: 20px;
}
.Collapsible__contentInner p:last-child {
  margin-bottom: 0;
}
.Collapsible__trigger {
  display: block;
  font-weight: 500;
  text-decoration: none;
  color: grey;
  position: relative;
  border: 1px solid white;
  padding: 10px;
  background: #006daa;
  color: white;
}
.Collapsible__trigger:after {
  font-family: "FontAwesome";
  content: "\f107";
  position: absolute;
  right: 10px;
  top: 10px;
  display: block;
  transition: transform 300ms;
}
.Collapsible__trigger.is-open:after {
  transform: rotateZ(180deg);
}
.Collapsible__trigger.is-disabled {
  opacity: 0.5;
  background-color: grey;
}
.CustomTriggerCSS {
  background-color: lightcoral;
  transition: background-color 200ms ease;
}
.CustomTriggerCSS--open {
  background-color: darkslateblue;
}
.Collapsible__custom-sibling {
  padding: 5px;
  font-size: 12px;
  background-color: #cbb700;
  color: black;
}
@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

